* added ArangoDatabaseAsync.grantAccess(String, Permissions)
* added ArangoCollectionAsync.grantAccess(String, Permissions)
* added ArangoDatabaseAsync.resetAccess(String)
* added ArangoCollectionAsync.resetAccess(String)
* added ArangoDBAsync.updateUserDefaultDatabaseAccess(String, Permissions)
* added ArangoDBAsync.updateUserDefaultCollectionAccess(String, Permissions)
* added ArangoCollectionAsync.getDocuments(Collection<String>, Class)


v4.2.1 (2017-06-20)
---------------------------
* fixed deserializing of internal field _id

v4.2.0 (2017-06-14)
---------------------------
* added ArangoDBVersion.getLicense()
* added ArangoDB.getRole()
* added ArangoDBException.getException()
* updated velocypack-module-jdk8
  * added support for deserializing null values into Optional.empty()
  * added support for deserializing null values into OptionalDouble.empty()
  * added support for deserializing null values into OptionalInt.empty()
  * added support for deserializing null values into OptionalLong.empty()

v4.1.12 (2017-04-21)
---------------------------
* added ArangoDatabaseAsync.cursor()
* optimized ArangoDB.Builder for better multi thread support

v4.1.11 (2017-03-24)
---------------------------
* fixed exception handling in Connection
* extracted VelocyPack implementation to https://github.com/arangodb/java-velocypack
* added convenience methods (ArangoDatabase.arango(), ArangoCollection.db(), ArangoGraph.db())
* added convenience methods (ArangoCollection.getIndex(String), .deleteIndex(key))
* added connection pooling
* added extension point for VelocyPack serialization (ArangoDBAsync.registerModule())
* added dependency java-velocypack-module-jdk8
* added support for replacing build-in VelocyPack serializer/deserializer
* added ArangoDatabaseAsync.getVersion(), ArangoDatabaseAsync.getAccessibleDatabases()

v4.1.10 (2017-02-22)
---------------------------
* changed velocystream message sending to async