@@ -6,8 +6,9 @@ v4.2.2 (xxxx-xx-xx)
 * added ArangoCollectionAsync.resetAccess(String)
 * added ArangoDBAsync.updateUserDefaultDatabaseAccess(String, Permissions)
 * added ArangoDBAsync.updateUserDefaultCollectionAccess(String, Permissions)
+* added ArangoDatabaseAsync.updateUserDefaultCollectionAccess(String, Permissions)
 * added ArangoCollectionAsync.getDocuments(Collection<String>, Class)
-
+* added connection/handshake retry on same host
 
 v4.2.1 (2017-06-20)
 ---------------------------
